<resources>
    <string name="app_name">Plenti Full</string>
    <string name="title_home">Home</string>
    <string name="favourites_nav_text">Favourites</string>
    <string name="roulette_nav_text">Recipe Roulette</string>
    <string name="settings_nav_text">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="InstructionsTitle">Instructions</string>
    <string name="roulette_title">Try your Luck!</string>
    <string name="youtubeBlurbText">Need more assitance? Watch a video tutorial!</string>
    <string name="roulettetext">Let lady luck decide what to make for dinner tonight!  If you\'re stuck in the same old meal routine and want to shake it up a bit but can\'t think of any ideas then why not give the wheel a spin and try one of these recipes! \\n Sure to satisfy any foodies craving and any gambler\'s, too!</string>
    <string name="settings_button_one_text">Tutorial</string>
    <string name="roulette_button_text">Spin</string>
    <string name="settings_button_two_text">Spin</string>
    <string name="settings_button_three_text">Spin</string>
    <string name="settings_button_four_text">Credits</string>
    <string name="creditsTitle">Developers</string>
    <string name="owen_name">Owen Bick</string>
    <string name="nick_name">Nicholas Tavares</string>
    <string name="iconsTitle">Icons</string>
    <string name="icons_eight">icons8.com</string>
    <string name="images_title">Images</string>
    <string name="unsplash_text">unsplash.com</string>
    <string name="favoritesMessage">No favourites yet? \n Add a favourite to get started!</string>
    <string name="settingsTitle">Settings</string>
    <string name="columnSubtitle">Number of Columns in Category</string>

</resources>
